--- a/.env
+++ b/.env
@@ -32,3 +32,10 @@ APP_SECRET=510b70e6ac11d886987daee461417b02
 DATABASE_URL="mysql://root:@127.0.0.1:3306/SMessenger?serverVersion=mariadb-10.4.10"
 #DATABASE_URL="postgresql://root:@127.0.0.1:5432/SMessenger?serverVersion=mariadb-10.4.10"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
